// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hcm-compliances - convertToStartCase should get "-"  1`] = `"-"`;

exports[`hcm-compliances - convertToStartCase should get "-"  2`] = `"-"`;

exports[`hcm-compliances - convertToStartCase should get start cases 1`] = `"Test 1 Test 2, Test 3, Test 4 Test 5"`;

exports[`hcm-compliances - createComplianceLink should return valid compliance link 1`] = `"testCreateComplianceLink1"`;

exports[`hcm-compliances - createComplianceLink should return valid compliance link 2`] = `
<Link
  replace={false}
  to="undefined/all/testCreateComplianceLink2"
>
  testCreateComplianceLink2
   (Deprecated)
</Link>
`;

exports[`hcm-compliances - createComplianceLink should return valid compliance link 3`] = `
<Link
  replace={false}
  to="undefined/all/testCreateComplianceLink3"
>
  testCreateComplianceLink3
</Link>
`;

exports[`hcm-compliances - createCompliancePolicyLink should return valid compliance policy link 1`] = `"-"`;

exports[`hcm-compliances - createPolicyLink should return valid policy link 1`] = `
<Link
  replace={false}
  to="undefined/all/undefined/undefined/compliancePolicy/undefined"
/>
`;

exports[`hcm-compliances - formLinkToCISControllerDoc should get -  1`] = `"-"`;

exports[`hcm-compliances - formLinkToCISControllerDoc should get -  2`] = `"-"`;

exports[`hcm-compliances - formLinkToCISControllerDoc should get message with doc link 1`] = `
<div>
  couldn't find mapping resource with kind CisPolicy, please check if you have corresponding policy controller deployed 
  <a
    href="undefined/blob/doc_stage/about/known_issues.md#1087/"
    target="_blank"
  >
    View documentation
  </a>
</div>
`;

exports[`hcm-compliances - formLinkToCISControllerDoc should get message without doc link 1`] = `"mapping resource with kind CisPolicy"`;

exports[`hcm-compliances - formLinkToCISControllerDoc should get message without doc link 2`] = `"Testing Policy"`;

exports[`hcm-compliances - formLinkToCluster should get -  1`] = `"-"`;

exports[`hcm-compliances - formLinkToCluster should get -  2`] = `"-"`;

exports[`hcm-compliances - formLinkToCluster should get RedHat  1`] = `"RedHat"`;

exports[`hcm-compliances - formLinkToCluster should get formLinkToCluster 1`] = `
<a
  href="/multicloud/clusters"
  target="_blank"
>
  RedHat
</a>
`;

exports[`hcm-compliances - getCategories should return categories status 1`] = `"11, 12, 13, 14, 15"`;

exports[`hcm-compliances - getClusterCount should return cluster count 1`] = `"7/15"`;

exports[`hcm-compliances - getCompliancePolicyStatus should return compliance policy status 1`] = `
<StatusField
  status="critical"
  text="not compliant"
/>
`;

exports[`hcm-compliances - getCompliancePolicyStatus should return compliance policy status 2`] = `
<StatusField
  status="ok"
  text="compliant"
/>
`;

exports[`hcm-compliances - getComplianceStatusIcon should return compliance status incon 1`] = `
<StatusField
  status="ok"
  text="compliant"
/>
`;

exports[`hcm-compliances - getComplianceStatusIcon should return compliance status incon 2`] = `
<StatusField
  status="critical"
  text="not compliant"
/>
`;

exports[`hcm-compliances - getControls should return control status 1`] = `"1, 2, 3, 4, 5"`;

exports[`hcm-compliances - getDecisions should return decisions status 1`] = `"clusterName1, clusterName2, clusterName3"`;

exports[`hcm-compliances - getDecisions should return default status 1`] = `"-"`;

exports[`hcm-compliances - getStandards should return standards status 1`] = `"6, 7, 8, 9, 10"`;

exports[`hcm-compliances - getStatus should return compliant status 1`] = `
<StatusField
  status="ok"
  text="compliant"
/>
`;

exports[`hcm-compliances - getStatus should return compliant status 2`] = `
<StatusField
  status="critical"
  text="not compliant"
/>
`;

exports[`hcm-compliances - getStatusCount should return status count 1`] = `"5/10"`;

exports[`hcm-compliances - getStatusIcon should return compliant status 1`] = `
<StatusField
  status="ok"
  text="compliant"
/>
`;

exports[`hcm-compliances - getStatusIcon should return noncompliant status 1`] = `
<StatusField
  status="critical"
  text="not compliant"
/>
`;

exports[`hcm-compliances - getStatusIconForPolicy should return compliant status 1`] = `
<div
  className="compliance-table-status"
>
  <Icon
    className="table-status__compliant"
    description=""
    fillRule="evenodd"
    name="icon--checkmark--glyph"
    role="img"
  />
</div>
`;

exports[`hcm-compliances - getStatusIconForPolicy should return noncompliant status 1`] = `
<div
  className="compliance-table-status"
>
  <Icon
    className="table-status__not_compliant"
    description=""
    fillRule="evenodd"
    name="icon--error--glyph"
    role="img"
  />
</div>
`;

exports[`hcm-compliances - getSubjects should get ""  1`] = `""`;

exports[`hcm-compliances - getSubjects should get "-"  1`] = `"-"`;

exports[`hcm-compliances - getSubjects should get subjects 1`] = `"testName1(testApiGroup1), testName2(testApiGroup2)"`;
